# CodeSeeX

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CHANGELOG_CN.md  Cargo.toml  README.md  README_CN.md  manager.js  package-lock.json  package.json  proxy.env.example  proxy.js  run-deepseek-agent-smoke.cmd  start-desktop.cmd
apps/codeseex-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/codeseex-desktop/src-tauri/capabilities/: default.json
apps/codeseex-desktop/src-tauri/src/: lib.rs
crates/codeseex-proxy/: Cargo.toml
crates/codeseex-proxy/src/: community_tools.rs  lib.rs  response_sse.rs  server.rs  tool_passthrough.rs  tools.rs  upstream.rs
crates/codeseex-proxy/src/responses/: context.rs
crates/codeseex-proxy/src/tools/: response_items.rs
docs/: about-page-template-gallery.html  architecture.md  build-actions.md  codex-context-runtime-design.md  community-tools.md  electron-parity-baseline.md  electron-parity-checklist.md  installer-migration.md  m1-api.md  milestones.md  release-notes.json  screenshots.md  state-contract.md  tool-authoring.md
scripts/: build-catalog-seed.js  check-proxy-windows.ps1  check-windows.ps1  codex-app-model-list-diagnostic.mjs  context-fidelity-smoke-windows.ps1  deepseek-agent-smoke.config.example.json  mcp-http-smoke-server.js  mcp-legacy-sse-smoke-server.js  mcp-smoke-server.js  run-codex-app-model-list-diagnostic-windows.bat  run-codex-app-model-list-diagnostic-windows.ps1  run-deepseek-agent-smoke.js  run-direct-fidelity-smoke.js  start-desktop-windows.ps1  start-proxy-windows.ps1  (+6 more)
(+181 files in other folders)
